src/Cosette/tests/symbolic/failing/symbolic-arrays-0.js
var f1 = symb_string (s1); 

var a = [ 17 ];

var v1 = a[f1];

Assert (not (v1 = 17));

v1